--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: java
 jdk:
 - oraclejdk7
 sudo: false
+install:true
+script: mvn install
 after_success:
   - bash <(curl -s https://codecov.io/bash)
-
