--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install: true
 script: mvn install
 after_success:
   - mvn clean test jacoco:report
-  - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash) -X coveragepy -B master
