--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ script: mvn install
 after_success:
   - mvn clean test jacoco:report
   - bash <(curl -s https://codecov.io/bash) -X coveragepy -B master
+ervice_name: travis-pro
+repo_token: fWJbWw2zRvMuZS2DbIhadTXTud9Q8YRQV
